FIX: Align Banjo DroneString

--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,10 @@ select {
 	border-bottom-width: 0;
 }
 
+.Banjo .DroneString.ml-1 {
+	margin-left: calc(var(--spacing) * 0.9);
+}
+
 .Banjo .DroneString .SkippedFret {
 	--tw-bg-opacity: 1;
 	border-bottom: 1px solid rgb(253 186 116 / var(--tw-bg-opacity));
